adjust width on container divs to prevent answer buttons to wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,7 @@ header img {
     position: fixed;
     right: 12.5%;
     left: 12.5%;
-    width: 75%;
+    width: 85%;
     height: 75%;
 
 }
@@ -184,7 +184,7 @@ button:active {
     #start-div,
     #game-div,
     #result-div {
-        width: 85%;
+        width: 90%;
         margin-left: -5%;
     }
 
